@@ -6,7 +6,6 @@ plugins {
 
 application {
     mainClass.set("me.centralhardware.znatoki.telegram.statistic.MainKt")
-    applicationDefaultJvmArgs = listOf("--add-modules jdk.incubator.vector")
 }
 
 group = "me.centralhardware.znatoki.telegram.statistic"
